# pico-dht22-pio

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.c  test.uf2
dht22/: CMakeLists.txt  dht22.c  dht22.h  dht22.pio
html/: CMakeFiles_23_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_822_81_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2common_2pico__sync_2lock__core_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2common_2pico__time_2time_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2common_2pico__time_2timeout__helper_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2hardware__claim_2claim_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2hardware__sync_2sync_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2hardware__uart_2uart_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2hardware__vreg_2vreg_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2hardware__xosc_2xosc_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2pico__bootrom_2bootrom_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2pico__double_2double__init__rom_8c_8obj_8d.html  CMakeFiles_2test_8dir_2home_2rich_2pico-sdk_2src_2rp2__common_2pico__double_2double__math_8c_8obj_8d.html  README_8md.html  ada__output_8cpp_8o_8d.html  annotated.html  binary__info_8c_8obj_8d.html  (+246 more)
(+74 files in other folders)
